<resources>
    <string name="app_name">KeySight</string>

    <!--about us page-->
    <string name="aboutUs">About Us</string>
    <string name="aboutSightReading">About Sight Reading</string>

    <!--Main page button-->
    <string name="aboutButton">About Us</string>
    <string name="tutorialButton">Tutorial</string>
    <string name="practiceButton">Practice </string>
    <string name="sightReadingButton">Sight Reading</string>

    <!--Practice page-->
    <string name="question">Which note is it?</string>



    <!--Sight Reading Menu page-->
    <!--Text-->
    <string name="bpmText">bpm: </string>
    <string name="clefText">clef: </string>
    <string name="majorText">Major: </string>
    <string name="minorText">Minor: </string>
    <!--Button-->
    <string name="random">Random</string>
    <string name="leftHandPracticeButton">F-clef</string>
    <string name="rightHandPracticeButton">G-clef</string>
    <!--Major and Minor-->
    <string name="CButton">C</string>
    <string name="DButton">D</string>
    <string name="EButton">E</string>
    <string name="FButton">F</string>
    <string name="GButton">G</string>
    <string name="AButton">A</string>
    <string name="BButton">B</string>
    <string name="CCButton">C\u266F</string>
    <string name="DDButton">D\u266F</string>
    <string name="FFButton">F\u266F</string>
    <string name="GGButton">G\u266F</string>
    <string name="AAButton">A\u266F</string>
    <string name="AaButton">A\u266D</string>
    <string name="BbButton">B\u266D</string>
    <string name="CcButton">C\u266D</string>
    <string name="DdButton">D\u266D</string>
    <string name="EeButton">E\u266D</string>
    <string name="GgButton">G\u266D</string>

    <string name="startSightReading">start</string>
    <string name="otherSheet">Other Sheet</string>

    <!--Sight Reading Pracitce page-->
    <string name="analyze">analyze</string>
    <string name="play">play</string>
    <string name="startRecording">start</string>

    <!--Tutorial page-->
    <string name="tutorialInstructiontext">Tap a piano key</string>


    <!--Pactice Menu page-->
    <string name="withFakePianoButton">Practice With Virtual Piano Button</string>
    <string name="withRealPianoButton">Practice With Real Piano</string>
    <string name="practiceInstructionText">Which Type of Practice would you want?</string>

    <string name="practiceWithPianoInstruction">Play the key on the piano.</string>

    <string name="homeButton">Home</string>
    <string name="restartButton">Restart</string>
    <string name="endButton">End game</string>
    <string name="recordButton">Start Recording</string>
    <string name="playRecordButton">Start Playing Record</string>

</resources>
