<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticeMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"></include>

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></android.widget.Space>
        <TextView
            android:id="@+id/practiceInstructionText"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:text="@string/practiceInstructionText"
            android:textColor="@color/black"/>


        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"></android.widget.Space>

        <Button
            android:id="@+id/withFakePianoButton"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/withFakePianoButton"
            android:background="@drawable/button"/>

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"></android.widget.Space>

        <Button
            android:id="@+id/withRealPianoButton"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/withRealPianoButton"
            android:background="@drawable/button" />

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"></android.widget.Space>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>