<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.3"
            android:orientation="horizontal"
            android:weightSum="5">

                <ImageView
                    android:id="@+id/iconView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="75dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/appicon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:weightSum="7.5">


                    <android.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"></android.widget.Space>

                    <Button
                        android:id="@+id/aboutButton"
                        android:layout_width="270dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/button"
                        android:text="@string/aboutButton" />

                    <android.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"></android.widget.Space>

                    <Button
                        android:id="@+id/practiceButton"
                        android:layout_width="270dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/button"
                        android:text="@string/practiceButton" />

                    <android.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"></android.widget.Space>

                    <Button
                        android:id="@+id/sightReadingButton"
                        android:layout_width="270dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/button"
                        android:text="@string/sightReadingButton" />

                    <android.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"></android.widget.Space>

                    <Button
                        android:id="@+id/listenPracticeButton"
                        android:layout_width="270dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/button"
                        android:text="@string/listenPracticeButton" />

                    <android.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"></android.widget.Space>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</android.support.constraint.ConstraintLayout>